Fixing vertical alignment of icons

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -1537,6 +1537,10 @@ input[type="checkbox"] {
   max-width: none;
   vertical-align: middle; }
 
+.dashboard-icon {
+  vertical-align: middle;
+}
+
 .completed {
   -webkit-filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.15));
   filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.15));
